@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_svinfo.c,v 1.2 1999/07/28 07:49:37 tomh Exp $
+ *   $Id: m_svinfo.c,v 1.3 1999/08/12 03:02:20 lusky Exp $
  */
 #include "m_commands.h"
 #include "client.h"
@@ -117,7 +117,7 @@ int m_svinfo(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
        * TS_ONLY we can't fall back to the non-TS protocol so
        * we drop the link  -orabidoo
        */
-      sendto_ops("Link %s dropped, wrong TS protocol version (%s,%s)",
+      sendto_realops("Link %s dropped, wrong TS protocol version (%s,%s)",
                  get_client_name(sptr, TRUE), parv[1], parv[2]);
       return exit_client(sptr, sptr, sptr, "Incompatible TS version");
     }
@@ -131,7 +131,7 @@ int m_svinfo(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 
   if (deltat > TS_MAX_DELTA)
     {
-      sendto_ops(
+      sendto_realops(
        "Link %s dropped, excessive TS delta (my TS=%d, their TS=%d, delta=%d)",
                  get_client_name(sptr, TRUE), CurrentTime, theirtime,deltat);
       return exit_client(sptr, sptr, sptr, "Excessive TS delta");
