@@ -1,3 +1,8 @@
+*** 20001017_1 by lusky
+fixed a bug tickled by sending a bogus SERVER command from hacked server
+auditted leakage of IP address from get_client_name calls
+
+
 *** 20001011_1 by lusky
 fix for *@*.foo.com I:lines being broken by a user@host.foo.com I:lines
 
